@@ -1,4 +1,5 @@
 Development
+    Cleanup some more seconds_to_string code
     Show chapters in file details when > 0
     Don't place files on recent list if running in plugin mode
     Implement chapter seeking and detection in mkv files, depends on patch submitted to mplayer
